--- a/bottom-sheet.html
+++ b/bottom-sheet.html
@@ -56,6 +56,7 @@ Custom property | Description | Default
 @group UI Elements
 @element bottom-sheet
 @demo demo/index.html
+@hero hero.svg
 -->
 <dom-module id="bottom-sheet">
   <template>
