--- a/bottom-sheet.html
+++ b/bottom-sheet.html
@@ -61,7 +61,7 @@ Custom property | Description | Default
 <dom-module id="bottom-sheet">
   <template>
     <style>
-     :host {
+    :host {
       display: block;
       position: fixed;
       background-color: var(--bottom-sheet-background-color, #fff);
@@ -84,22 +84,23 @@ Custom property | Description | Default
       @apply(--paper-font-common-base);
     }
 
-     :host(.fit-bottom) {
+    :host(.fit-bottom) {
       width: 100%;
       min-width: 0;
       border-radius: 0;
       margin: 0;
     }
 
-     :host(.center-bottom) {
+    :host(.center-bottom) {
       left: initial;
     }
 
-     :host(.bottom-sheet-open) {
+    :host(.bottom-sheet-open) {
       opacity: 1;
       -webkit-transform: translateY(0px);
       transform: translateY(0px);
     }
+
     label {
       @apply(--paper-font-caption);
       height: 48px;
@@ -109,6 +110,10 @@ Custom property | Description | Default
       @apply(--layout-horizontal);
       @apply(--layout-center);
       padding-left: 16px;
+    }
+
+    [hidden] {
+      display: none !important;
     }
     </style>
     <label hidden$="[[!label]]">[[label]]</label>
