--- a/demo/index.html
+++ b/demo/index.html
@@ -1,40 +1,23 @@
 <!doctype html>
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
 <html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
-
   <title>bottom-sheet demo</title>
-
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-
+  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
+  <link rel="import" href="../../polymer/lib/elements/dom-repeat.html">
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
   <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
   <link rel="import" href="../../paper-item/paper-item.html">
   <link rel="import" href="../../paper-item/paper-icon-item.html">
   <link rel="import" href="../../paper-button/paper-button.html">
   <link rel="import" href="../../iron-icon/iron-icon.html">
-
-
   <link rel="import" href="../bottom-sheet.html">
-
-  <style is="custom-style" include="demo-pages-shared-styles">
-
-    .vertical-section-container {
-      max-width: 600px;
-    }
-
-  </style>
+  <custom-style>
+    <style is="custom-style" include="demo-pages-shared-styles">
+    </style>
+  </custom-style>
 </head>
 <body unresolved>
   <div class="vertical-section-container centered">
@@ -48,7 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </bottom-sheet>
         <paper-button raised id="b1">Open menu</paper-button>
         <script>
-          document.querySelector('#b1').addEventListener('tap', function() {
+          document.querySelector('#b1').addEventListener('click', function() {
             document.querySelector('#s1').open();
           });
         </script>
@@ -60,29 +43,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <template>
         <bottom-sheet id="s2" class="center-bottom" label="Open with ..." no-padding>
           <paper-icon-item>
-            <iron-icon src="inbox.png" item-icon></iron-icon>
+            <iron-icon src="inbox.png" slot="item-icon"></iron-icon>
             Inbox
           </paper-icon-item>
           <paper-icon-item>
-            <iron-icon src="keep.png" item-icon></iron-icon>
+            <iron-icon src="keep.png" slot="item-icon"></iron-icon>
             Keep
           </paper-icon-item>
           <paper-icon-item>
-            <iron-icon src="hangouts.png" item-icon></iron-icon>
+            <iron-icon src="hangouts.png" slot="item-icon"></iron-icon>
             Hangouts
           </paper-icon-item>
           <paper-icon-item>
-            <iron-icon src="messenger.png" item-icon></iron-icon>
+            <iron-icon src="messenger.png" slot="item-icon"></iron-icon>
             Messenger
           </paper-icon-item>
           <paper-icon-item>
-            <iron-icon src="gplus.png" item-icon></iron-icon>
+            <iron-icon src="gplus.png" slot="item-icon"></iron-icon>
             Google+
           </paper-icon-item>
         </bottom-sheet>
         <paper-button raised id="b2">Open with ...</paper-button>
         <script>
-          document.querySelector('#b2').addEventListener('tap', function() {
+          document.querySelector('#b2').addEventListener('click', function() {
             document.querySelector('#s2').opened = true;
           });
         </script>
@@ -94,17 +77,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <demo-snippet>
       <template>
         <bottom-sheet id="s3" class="center-bottom" label="Images (might take time to load)">
-          <template is="dom-repeat" id="t3">
-            <img src="[[item]]" />
-          </template>
+          <dom-repeat id="t3">
+            <template>
+              <img src="[[item]]"/>
+            </template>
+          </dom-repeat>
         </bottom-sheet>
         <paper-button raised id="b3">Open</paper-button>
         <script>
-          document.getElementById('b3').addEventListener('tap', function() {
-            var tpl = document.getElementById('t3');
+          document.getElementById('b3').addEventListener('click', function() {
+            const tpl = document.getElementById('t3');
             if (!tpl.items) {
-              var imgs = [];
-              for (var i = 0; i < 15; i++) {
+              const imgs = [];
+              for (let i = 0; i < 15; i++) {
                 imgs.push('http://loremflickr.com/400/400/?random=' + i);
               }
               tpl.items = imgs;
