--- a/bottom-sheet.html
+++ b/bottom-sheet.html
@@ -54,6 +54,9 @@ Custom property | Description | Default
 ----------------|-------------|----------
 `--bottom-sheet-background-color` | The bottom-sheet background-color | `#fff`
 `--bottom-sheet-color` | The bottom-sheet color | `#323232`
+`--bottom-sheet-max-width` | Max width of the element | ``
+`--bottom-sheet-max-height` | Max heigth of the element | ``
+`--bottom-sheet-label-color` | Color of the label | `rgba(0, 0, 0, 0.54)`
 
 @customElement
 @polymer
@@ -84,6 +87,8 @@ Custom property | Description | Default
       opacity: 0;
       -webkit-transform: translateY(100px);
       transform: translateY(100px);
+      max-width: var(--bottom-sheet-max-width);
+      max-height: var(--bottom-sheet-max-height);
       @apply --arc-font-common-base;
     }
 
@@ -107,7 +112,7 @@ Custom property | Description | Default
     label {
       @apply --arc-font-caption;
       height: 48px;
-      color: rgba(0, 0, 0, 0.54);
+      color: var(--bottom-sheet-label-color, rgba(0, 0, 0, 0.54));
       display: block;
       font-size: 15px;
       @apply --layout-horizontal;
@@ -142,7 +147,9 @@ Custom property | Description | Default
     // Keeps track of the toast currently opened.
     let currentSheet;
     class BottomSheet extends Polymer.mixinBehaviors([Polymer.IronOverlayBehavior], Polymer.Element) {
-      static get is() { return 'bottom-sheet'; }
+      static get is() {
+        return 'bottom-sheet';
+      }
       static get properties() {
         return {
           /**
