--- a/demo/index.html
+++ b/demo/index.html
@@ -5,15 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <title>bottom-sheet demo</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/dom-repeat.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../../paper-item/paper-item.html">
-  <link rel="import" href="../../paper-item/paper-icon-item.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../../iron-icon/iron-icon.html">
-  <link rel="import" href="../bottom-sheet.html">
+  
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../node_modules/web-animations-js/web-animations-next.min.js"></script>
+  
+  <script type="module">
+    import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
+    import '@polymer/iron-demo-helpers/demo-snippet';
+    import '@polymer/polymer/lib/elements/dom-repeat';
+    import '@polymer/paper-item/paper-item';
+    import '@polymer/paper-button/paper-button';
+    import '@polymer/paper-item/paper-icon-item';
+    import '@polymer/iron-icon/iron-icon';
+  </script>
+
+  <script type="module" src="../bottom-sheet.js"></script>
   <custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
