--- a/demo/index.html
+++ b/demo/index.html
@@ -1,47 +1,54 @@
-<!doctype html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <title>bottom-sheet demo</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/dom-repeat.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../../paper-item/paper-item.html">
-  <link rel="import" href="../../paper-item/paper-icon-item.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../../iron-icon/iron-icon.html">
-  <link rel="import" href="../bottom-sheet.html">
-  <custom-style>
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script type="module" src="../../../@polymer/polymer/lib/elements/dom-repeat.js"></script>
+  <script type="module" src="../../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
+  <script type="module" src="../../../@polymer/iron-demo-helpers/demo-snippet.js"></script>
+  <script type="module" src="../../../@polymer/paper-item/paper-item.js"></script>
+  <script type="module" src="../../../@polymer/paper-item/paper-icon-item.js"></script>
+  <script type="module" src="../../../@polymer/paper-button/paper-button.js"></script>
+  <script type="module" src="../../../@polymer/iron-icon/iron-icon.js"></script>
+  <script type="module" src="../bottom-sheet.js"></script>
+  <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
-  </custom-style>
+  </custom-style>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>
 </head>
-<body unresolved>
-  <div class="vertical-section-container centered">
-    <h3>The `bottom-sheet`</h3>
+<body unresolved="">
+  <script type="module">
+const $_documentContainer = document.createElement('template');
+
+$_documentContainer.innerHTML = `<div class="vertical-section-container centered">
+    <h3>The \`bottom-sheet\`</h3>
     <demo-snippet>
       <template>
-        <bottom-sheet id="s1" no-padding>
+        <bottom-sheet id="s1" no-padding="">
           <paper-item>Action #1</paper-item>
           <paper-item>Action #2</paper-item>
           <paper-item>Action #3</paper-item>
         </bottom-sheet>
-        <paper-button raised id="b1">Open menu</paper-button>
+        <paper-button raised="" id="b1">Open menu</paper-button>
         <script>
           document.querySelector('#b1').addEventListener('click', function() {
             document.querySelector('#s1').open();
           });
-        </script>
+        &lt;/script>
       </template>
     </demo-snippet>
 
     <h3>Open with ...</h3>
     <demo-snippet>
       <template>
-        <bottom-sheet id="s2" class="center-bottom" label="Open with ..." no-padding>
+        <bottom-sheet id="s2" class="center-bottom" label="Open with ..." no-padding="">
           <paper-icon-item>
             <iron-icon src="inbox.png" slot="item-icon"></iron-icon>
             Inbox
@@ -63,12 +70,12 @@
             Google+
           </paper-icon-item>
         </bottom-sheet>
-        <paper-button raised id="b2">Open with ...</paper-button>
+        <paper-button raised="" id="b2">Open with ...</paper-button>
         <script>
           document.querySelector('#b2').addEventListener('click', function() {
             document.querySelector('#s2').opened = true;
           });
-        </script>
+        &lt;/script>
       </template>
     </demo-snippet>
 
@@ -79,11 +86,11 @@
         <bottom-sheet id="s3" class="center-bottom" label="Images (might take time to load)">
           <dom-repeat id="t3">
             <template>
-              <img src="[[item]]"/>
+              <img src="[[item]]">
             </template>
           </dom-repeat>
         </bottom-sheet>
-        <paper-button raised id="b3">Open</paper-button>
+        <paper-button raised="" id="b3">Open</paper-button>
         <script>
           document.getElementById('b3').addEventListener('click', function() {
             const tpl = document.getElementById('t3');
@@ -96,9 +103,45 @@
             }
             document.getElementById('s3').opened = true;
           });
-        </script>
+        &lt;/script>
       </template>
     </demo-snippet>
-  </div>
-</body>
-</html>
+  </div>`;
+
+document.body.appendChild($_documentContainer.content);
+</script>ate&gt;
+        <bottom-sheet id="s3" class="center-bottom" label="Images (might take time to load)">
+          <dom-repeat id="t3">
+            <template>
+              <img src="[[item]]">
+            </template>
+          </dom-repeat>
+        </bottom-sheet>
+        <paper-button raised="" id="b3">Open</paper-button>
+        <script type="module">
+import '../../../@polymer/polymer/lib/elements/dom-repeat.js';
+import '../../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
+import '../../../@polymer/iron-demo-helpers/demo-snippet.js';
+import '../../../@polymer/paper-item/paper-item.js';
+import '../../../@polymer/paper-item/paper-icon-item.js';
+import '../../../@polymer/paper-button/paper-button.js';
+import '../../../@polymer/iron-icon/iron-icon.js';
+import '../bottom-sheet.js';
+document.getElementById('b3').addEventListener('click', function() {
+  const tpl = document.getElementById('t3');
+  if (!tpl.items) {
+    const imgs = [];
+    for (let i = 0; i < 15; i++) {
+      imgs.push('http://loremflickr.com/400/400/?random=' + i);
+    }
+    tpl.items = imgs;
+  }
+  document.getElementById('s3').opened = true;
+});
+</script>
+      
+    
+  
+
+
+</body></html>
