--- a/test/bottom-sheet-test.html
+++ b/test/bottom-sheet-test.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>bottom-sheet test</title>
-  <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="../../web-component-tester/browser.js"></script>
-  <link rel="import" href="../bottom-sheet.html">
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <script src="../../../wct-browser-legacy/browser.js"></script>
+  <script type="module" src="../bottom-sheet.js"></script>
 </head>
 <body>
   <test-fixture id="Basic">
@@ -21,7 +21,8 @@
     </template>
   </test-fixture>
 
-  <script>
+  <script type="module">
+  import '../bottom-sheet.js';
   suite('bottom-sheet', () => {
     let sheet;
 
